--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "govuk-frontend": "^5.5.0",
     "nunjucks": "^3.2.4"
   },
   "devDependencies": {
