--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && npm run copy-njk && npm run copy-assets && node dist/app.js",
     "dev": "nodemon src/app.ts",
     "linter": "npx eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "copy-njk": "cpy 'views/*' 'dist/views'",
+    "copy-assets": "cpy 'assets/*/*.*' 'dist/assets'"
   },
   "keywords": [],
   "author": "Shaun Ganley <shaung@kainos.com>",
@@ -15,6 +17,7 @@
   "dependencies": {
     "axios": "^1.3.1",
     "body-parser": "^1.20.2",
+    "cpy-cli": "^5.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "govuk-frontend": "^5.5.0",
